# ByteWorks-Desert_Perception_System

./: .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  REFACTORING.md  STATUS.md  animation.py  api.py  download_model.py  main.py  pyproject.toml  render.yaml  requirements.txt  results.txt  test_robustness.py  train_segment.py
Hardware Code/: main.py
IR_UV_Scripts/: dataset_camouflage.csv  dataset_terrain.csv  model_meta.json  rf_camouf.pkl  rf_terrain.pkl  ugv_ensemble.py
IR_Ultrasonic Models/: model.py
Image Processing Algs/: final_script.m  imggen.py  imgpro.py
Offroad_Segmentation_Scripts/: test_segmentation.py  train_segmentation.py  visualize.py
Offroad_Segmentation_Scripts/ENV_SETUP/: requirements.txt  setup_env.sh
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: hero-section.tsx  hud-scanner.tsx  interactive-pie-chart.tsx  model-transparency.tsx  neural-background.tsx  output-dashboard.tsx  (+12 more)
inference_engine/: config.py  decoder.py  encoder.py  model.py  preprocess.py  utils.py
offroad_training_pipeline/: DESIGN.md  README.md  __init__.py  config.py  cv_detector.py  dataset.py  explain_lime.py  metrics.py  test.py  train.py  utils.py  visualization.py  visualize.py
scripts/: generate_demo_gif.py
umixformer_pipeline/: __init__.py  compare_preproc.py  config.py  dataset.py  decoder.py  encoder.py  evaluate.py  explain_lime.py  explain_shap.py  losses.py  metrics.py  model.py  preprocess.py  train.py  utils.py  visualization.py
(+11 files in other folders)
